164798927-story(api): implement role based access control [finishes #164798927]
